package main.controllers;

public interface IData {
    boolean isDeviceAvailable(int id);
}
