package main.utility;

public enum PurchaseType {
    IN_STORE,
    ONLINE
}
