@startuml

skinparam linetype ortho

class BazarDriver

package controllers {
    class Store

    class PurchaseManager

    class IData
}

package models {
    abstract class Device <<abstract>>

    class Printer

    class Computer

    abstract class Purchase <<abstract>>

    class InStorePurchase

    class OnlinePurchase
}

package utility {
    class MenuInput

    class Utils

    enum PurchaseType <<enum>>
}


Printer --u-|> Device : <<extends>>
Computer --u-|> Device : <<extends>>

Printer "*" <--- "1" Store : creates
Computer "*" <--- "1" Store : creates

Printer ...> Utils
Computer ...>  Utils

BazarDriver ....> Store
BazarDriver ....> MenuInput

BazarDriver "1" ---> "1" PurchaseManager : creates

PurchaseManager "1" --> "*" Purchase : creates
PurchaseManager ...> IData

Purchase ...> PurchaseType
OnlinePurchase --u-|> Purchase : <<extends>>
InStorePurchase --u-|> Purchase : <<extends>>



@enduml